chore(security): configurar seguridad por roles con hasAuthority para ROLE_ADMIN